# pointcloud_registration

./: CMakeLists.txt  README.md  package.xml
launch/: allocate_pcd.launch  registration.launch
pcd_files/: demo.pcd  source.pcd  target.pcd
resources/: ReadMe-EN.md
rviz/: display.rviz
scripts/: cloud_accumulator_node.py  registration_node.py  test_without_ros.py
srv/: RegisterPointCloud.srv  SaveAccumulatedCloud.srv
